Make build compatible with CF 4.1.x