@@ -1,40 +1,36 @@
 plugins {
   id 'java-library'
 
-  // To create a fat jar build/libs/plume-util-all.jar, run: ./gradlew shadowJar
-  id 'com.github.johnrengelman.shadow' version '6.1.0'
-
   // Formatting is disabled due to poor handling of type annotations; wait until
   // this issue is fixed: https://github.com/google/google-java-format/issues/5
   // // Code formatting with Google Java Format; defines targets "goJF" and "verJF".
   // id 'com.github.sherter.google-java-format' version '0.7.1'
 
-  // Error Prone linter
-  id("net.ltgt.errorprone") version "1.3.0"
-
-  // Checker Framework pluggable type-checking
-  id 'org.checkerframework' version '0.5.19'
 }
 
 repositories {
   mavenCentral()
 }
 
+def cfVersion = '4.0.1-SNAPSHOT'
+def checkerJar = file("../m2-local/org/checkerframework/checker/${cfVersion}/checker-${cfVersion}.jar")
+def checkerQualJar = file("../m2-local/org/checkerframework/checker-qual/${cfVersion}/checker-qual-${cfVersion}.jar")
+
 dependencies {
   // https://mvnrepository.com/artifact/org.plumelib/reflection-util
   implementation 'org.plumelib:reflection-util:1.0.3'
 
-  errorprone 'com.google.errorprone:error_prone_core:2.5.1'
-
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+  compileOnly files(checkerQualJar)
+  testCompileOnly files(checkerQualJar)
+  annotationProcessor files(checkerJar)
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-// To upload to Maven Central, see instructions in the file.
-apply from: "${buildscript.sourceFile.parent}/gradle/mavencentral.gradle"
+java {
+  sourceCompatibility = JavaVersion.VERSION_1_8
+  targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 test {
     useJUnitPlatform {
@@ -48,67 +44,35 @@ test {
     }
 }
 
-/// Error Prone linter
-
-dependencies {
-  errorprone("com.google.errorprone:error_prone_core:2.5.1")
-  // JDK 8 support for Error Prone:
-  errorproneJavac("com.google.errorprone:javac:9+181-r4173-1")
-}
 tasks.withType(JavaCompile).configureEach {
-  options.compilerArgs << "-Xlint:all,-processing" << "-Werror"
-  options.errorprone {
-    // Code copied from the JDK that we don't want to change gratuitously.
-    excludedPaths = ".*/Weak.*Hash(er)?Map.java"
-  }
-  options.forkOptions.jvmArgs += "-Xmx2g"
-}
-
-/// Checker Framework pluggable type-checking
-
-apply plugin: 'org.checkerframework'
-
-dependencies {
-  implementation 'net.sridharan.objectconstruction:object-construction-qual:0.1.13'
-}
-checkerFramework {
-  checkers = [
-    //'org.checkerframework.checker.formatter.FormatterChecker',
-    //'org.checkerframework.checker.index.IndexChecker',
-    //'org.checkerframework.checker.interning.InterningChecker',
-    //'org.checkerframework.checker.lock.LockChecker',
-    //'org.checkerframework.checker.nullness.NullnessChecker',
-    //'org.checkerframework.checker.regex.RegexChecker',
-    //'org.checkerframework.checker.signature.SignatureChecker',
-    //'org.checkerframework.common.initializedfields.InitializedFieldsChecker'
-  ]
-  extraJavacArgs = [
-    '-Werror',
-    '-AcheckPurityAnnotations',
+  options.fork = true
+  options.compilerArgs << "-Xlint:all,-processing"
+  options.annotationProcessorPath = files(checkerJar)
+  options.compilerArgs += [
+    '-processor', 'org.checkerframework.checker.resourceleak.ResourceLeakChecker',
+    '-Xmaxerrs', '10000',
+    '-Xmaxwarns', '10000',
+    '-Adetailedmsgtext',
+    '-AshowPrefixInWarningMessages',
+    '-Awarns',
     '-ArequirePrefixInWarningSuppressions',
     '-AwarnUnneededSuppressions',
+    '-AdisableReturnsReceiver',
   ]
-}
-
-// Resource Leak checking
-dependencies {
-  checkerFramework 'net.sridharan.objectconstruction:object-construction-checker:0.1.13'
-}
-checkerFramework.checkers += 'org.checkerframework.checker.objectconstruction.ObjectConstructionChecker'
-checkerFramework.extraJavacArgs += [
-        '-AcheckMustCall',
-        // '-ACalledMethodsChecker_disableReturnsReceiver' would also work.
-        '-AdisableReturnsReceiver', // because this code does not use fluent APIs
-]
-
-// To use a locally-built Checker Framework, run gradle with "-PcfLocal".
-if (project.hasProperty("cfLocal")) {
-  def cfHome = String.valueOf(System.getenv("CHECKERFRAMEWORK"))
-  dependencies {
-    compileOnly files(cfHome + "/checker/dist/checker-qual.jar")
-    testCompileOnly files(cfHome + "/checker/dist/checker-qual.jar")
-    checkerFramework files(cfHome + "/checker/dist/checker.jar")
-  }
+  options.forkOptions.jvmArgs += [
+    '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+    '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+    '-Xmx8g',
+  ]
+  options.forkOptions.jvmArgs += "-Xmx2g"
 }
 
 /// Javadoc
@@ -160,7 +124,7 @@ dependencies {
 }
 task requireJavadoc(type: JavaExec) {
   description = 'Ensures that Javadoc documentation exists.'
-  main = "org.plumelib.javadoc.RequireJavadoc"
+  mainClass = "org.plumelib.javadoc.RequireJavadoc"
   classpath = configurations.requireJavadoc
   args "src/main/java", "--dont-require=WeakHasherMap|WeakIdentityHashMap"
 }
